# OpenCut

./: Cargo.toml  README.md  package.json  tauri_app_spec.md
apps/desktop/: Cargo.toml  README.md  tauri.conf.json
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/web/: next.config.ts  package.json
apps/web/content/changelog/: 0.2.0.md  0.3.0.md
apps/web/src/app/: metadata.ts  robots.ts  sitemap.ts
apps/web/src/app/contributors/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/rss.xml/: route.ts
apps/web/src/app/sponsors/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: footer.tsx  gitHub-contribute-section.tsx  header.tsx
apps/web/src/components/editor/: editor-header.tsx
apps/web/src/components/ui/: font-picker.tsx
apps/web/src/core/managers/: commands.ts  selection-manager.ts  timeline-manager.ts
apps/web/src/hooks/: use-font-atlas.ts  use-mask-handles.ts
apps/web/src/hooks/actions/: use-editor-actions.ts
apps/web/src/hooks/timeline/: use-timeline-resize.ts
apps/web/src/lib/actions/: definitions.ts
apps/web/src/lib/animation/: property-registry.ts
apps/web/src/lib/blog/: query.ts
apps/web/src/lib/commands/: base-command.ts
apps/web/src/lib/masks/: custom-path.ts  geometry.ts  handle-positions.ts  param-update.ts  registry.ts  snap.ts  types.ts
apps/web/src/lib/preview/: element-bounds.ts
apps/web/src/stores/: editor-store.ts  panel-store.ts  preview-store.ts
docs/: tauri-developer-guide.md  tauri-migration-report.md
(+67 files in other folders)
