[package]
name = "opencut-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.0"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Exit immediately on panic
codegen-units = 1 # Optimize for size
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size
strip = true # Strip symbols from binary
